# CTemplate

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  Doxyfile  INSTALL  LICENSE  Makefile  README.md  TODO  cmake  run
client/: CMakeLists.txt  Makefile  client.c
client/src/: client.c
common/: CMakeLists.txt
common/include/: strings.h
common/threads/: threads.c
common/util/: strings.c
core/: CMakeLists.txt  Makefile
core/src/io/: commands.c
include/client/: client.h
include/common/: strings.h
server/: CMakeLists.txt  Makefile
src/client/: CMakeLists.txt  client.c
src/core/: CMakeLists.txt
src/core/io/: file.c  socket.c
src/server/: CMakeLists.txt
tester/: Makefile
tests/: CMakeLists.txt  commands_test.cpp  tester.c  tests.txt
